add_executable(create_vocabulary create_vocabulary.cpp)
set_property(TARGET create_vocabulary PROPERTY CXX_STANDARD 14)
target_link_libraries(create_vocabulary trackeri tracker loop_gt_generator)
find_package(OpenCV QUIET COMPONENTS core highgui imgcodecs)
if(TARGET opencv_core AND TARGET opencv_highgui AND TARGET opencv_imgcodecs)
    target_compile_definitions(create_vocabulary PRIVATE HAVE_OPENCV)
    target_link_libraries(create_vocabulary ${OpenCV_LIBS})
endif()
